--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,10 +4,14 @@
 .footer {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    border-top: 1px solid $light-bamboo;
+    // position: fixed;
 
 
-    &__text {
-        font-size: small;
+    &__copyright {
+        font-size: x-small;
+        padding: 1.25rem;
     }
 
 
@@ -16,5 +20,8 @@
         width: 1.5625rem;
         height: 1.5625rem;
         background: $light-bamboo; 
+        margin-right: 0.5rem;
+        margin-top: 1.25rem;
+    
     }
 }
