--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -6,6 +6,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-top: 1px solid $light-bamboo;
+
+    &__title {
+        @include font-italic;
+    }
 
     &__image {
         height: 11.875rem;
@@ -16,7 +21,7 @@
         @include tablet {
             height: 23rem;
             width: 97vw;
-            margin: 1.5rem 1rem;
+            margin: 1rem 1rem;
         }
     }
 }
