added colours and mixins

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -9,9 +9,11 @@ $dark-black: #000000;
 $light-bamboo: #e5f2c9; 
 $alabaster: #fafafa; 
 $mercury: #e1e1e1;
+$bamboo: #3c5940;
 
 $primary-text-color: $dark-black;
 $primary-call-to-action: $alabaster;
 $secondary-text-color: $light-bamboo;
 $border-color: 1px solid $mercury;
 $background-color: $alabaster;
+$accent-color: $bamboo;
