--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -85,3 +85,24 @@
   width: 3.125rem;
   background: $alabaster;
 }
+
+@mixin form-field {
+      height: 2rem;
+      border-radius: 0.25rem;
+      
+      @include tablet {
+          height: 2rem;
+          width: 15rem;
+         
+      }
+  
+  &::placeholder {
+    color: $primary-text-color;
+  }
+
+  &:focus {
+    outline: 2px solid $accent-color;
+  } 
+
+  
+}
