--- a/src/pages/Prefectures/Prefectures.scss
+++ b/src/pages/Prefectures/Prefectures.scss
@@ -1,16 +1,45 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
+.shrines {
+  &__header {
+    text-align: center;
+    @include tablet {
+      @include font-pageheader;
+    }
+  }
 
-img {
+&__wrapper {
+  @include desktop {
+    display: flex;
+  flex-wrap: wrap;
+  }
+}
+
+&__item {
+  flex: 0 0 calc(50% - 1rem);
+}
+
+  &__title, 
+  &__city {
+    text-align: center;
+    margin-bottom: 0;
+  }
+
+  &__image {
     height: 11.875rem;
     width: 90%;
     object-fit: cover;
-    border-radius: 0.25rem;
-    margin: .5rem 1rem; 
+    border-radius: 0.5rem;
+    margin: 0.5rem 1rem;
     @include tablet {
-        height: 23rem;
-        width: 97vw;
-        margin: 1rem 1rem;
+      height: 32rem;
+      width: 97vw;
+      margin: 1rem 1rem;
+      @include desktop {
+        height: 25rem;
+        width: 98%;
+      }
     }
+  }
 }
