--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -10,6 +10,7 @@ $light-bamboo: #e5f2c9;
 $alabaster: #fafafa; 
 $mercury: #e1e1e1;
 $bamboo: #3c5940;
+$red: #bc002d; 
 
 $primary-text-color: $dark-black;
 $primary-call-to-action: $alabaster;
@@ -17,3 +18,9 @@ $secondary-text-color: $light-bamboo;
 $border-color: 1px solid $mercury;
 $background-color: $alabaster;
 $accent-color: $bamboo;
+$error-state: $red;
+
+$event-hover-state: $bamboo;
+$form-field-outline: $mercury;
+$form-field-background: $alabaster;
+$form-field-outline-error: $red;
