--- a/src/components/ReviewForm/ReviewForm.scss
+++ b/src/components/ReviewForm/ReviewForm.scss
@@ -10,6 +10,7 @@
 
 .review-form-title {
   @include font-medium;
+  text-align: center;
 }
 
 label {
@@ -17,23 +18,59 @@ label {
   margin-right: 1rem;
 }
 
-.review-form__field {
- margin-right: 2rem;
-  border: none;
-}
+.review-form {
+  &__group {
+    margin-bottom: 0.7rem;
+  }
+  &__field {
+    @include font-bodycopy;
+    margin-left: 0.8rem;
+    @include form-field;
+    @include tablet {
+      margin-left: 1.2rem;
+      padding-top: 0.5rem;
+    }
+  }
 
-.review-form__buttons {
+  &__text {
+    @include form-field;
+    @include font-bodycopy;
+    padding-top: 0.5rem;
+    padding-left: 0.4rem;
+    padding-bottom: 4rem;
+ 
+  }
+
+  &__name {
+    @include form-field;
+    @include font-bodycopy;
+    padding-bottom: 0.2rem;
+    padding-left: 0.4rem;
+    padding-top: 0.4rem;
+    @include tablet {
+      padding-top: 0.5rem;
+    }
+
+  }
+
+  &__buttons {
     display: flex;
     justify-content: center;
+  
+  }
+
+  &__error {
+    @include font-labelsbuttons;
+    color: $error-state;
+  }
 }
 
 button {
-    @include font-labelsbuttons;
-    background-color: $light-bamboo;
-    border-radius: 5rem;
-    padding: 0.3rem 0.5rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: none;
-    
+  @include font-labelsbuttons;
+  background-color: $light-bamboo;
+  border-radius: 5rem;
+  padding: 0.3rem 0.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: none;
 }
