--- a/src/components/Cover/Cover.scss
+++ b/src/components/Cover/Cover.scss
@@ -24,10 +24,10 @@
     text-align: center;
 
     .cover-image {
-        width: 320px;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         object-fit: cover;
-        margin-bottom: 20px;
+        margin-bottom: 1.25rem;
   }
 }
 
