--- a/src/components/ShrineRoulette/ShrineRoulette.scss
+++ b/src/components/ShrineRoulette/ShrineRoulette.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     align-items: center;
     background: $alabaster;
+    padding-bottom: 1rem;
 
     &__header {
         @include font-pageheader;
