--- a/src/pages/ShrineMain/ShrineMain.scss
+++ b/src/pages/ShrineMain/ShrineMain.scss
@@ -73,9 +73,11 @@
   }
 
   &__review {
-    border-top: 1px solid $light-bamboo;
     padding-bottom: .5rem;
     padding-top: 0.5rem;
+    @include tablet {
+      border-top: 1px solid $light-bamboo;
+    }
   }
 }
 
@@ -85,8 +87,10 @@
   text-align: center;
   margin-bottom: 1rem;
   border-top: 1px solid $light-bamboo;
+  padding-top: 0.5rem;
   @include tablet {
     border-top: none;
+    padding-top: 0.35rem;
   }
 
   &__comment {
